[gd_scene load_steps=3 format=3 uid="uid://d1ju5edtvxws7"]

[ext_resource type="Script" uid="uid://de5hd4187uc58" path="res://scripts/results_screen.gd" id="1_ljle7"]
[ext_resource type="FontFile" uid="uid://b0n31aftfbkjc" path="res://assets/fonts/Bread_Smile.ttf" id="2_j5vbe"]

[node name="ResultsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ljle7")

[node name="ComboLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 148.0
offset_right = 544.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_j5vbe")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[right]Max Combo : FULL COMBO"

[node name="AccuracyLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = 20.0
offset_right = 544.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_j5vbe")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[right]Accuracy : 100.00%"

[node name="ScoreLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = 76.0
offset_right = 544.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_j5vbe")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[right]Score : 0000000"

[node name="RankLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = -214.0
offset_right = 544.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_j5vbe")
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "[right]SS"
